rnsc/test_data/rns_integration/error/parser/class_header/trailing_token_recovers.rns
.class MyClass SomethingElse
.super java/lang/Object
; SomethingElse is error, but the parser should recover